# stochastic_mcts_optimization

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_module/: CMakeLists.txt
documents/article/: main.tex
documents/report/: bibliography.bib  main.tex
experiments/: CMakeLists.txt
experiments/include/experiments/: experiments.h  grid.h
experiments/include/experiments/twm/: ExperimentResult.h  experiments.h  grave.h  grid.h  nrpa.h  random.h  snrpa.h  uct.h
experiments/src/experiments/: experiments.cpp  grid.cpp  main.cpp
experiments/src/experiments/twm/: ExperimentResult.cpp  experiments.cpp  grave.cpp  grid.cpp  nrpa.cpp  random.cpp  snrpa.cpp  uct.cpp
experiments/test/experiments/: test_grid.cpp
experiments/test/experiments/twm/: test_grid.cpp
libs/: CMakeLists.txt
monte_carlo_algorithm/: CMakeLists.txt
monte_carlo_algorithm/include/mca/twm/: GRAVE.h  TranspositionEntry.h  TranspositionTable.h  UCT.h
monte_carlo_algorithm/include/mca/twm/nrpa/: NRPA.h  Policy.h  Result.h  Sequence.h  code.h  playout.h
monte_carlo_algorithm/include/mca/twm/snrpa/: Policy.h  Result.h  SNRPA.h  Sequence.h  code.h  playout.h
monte_carlo_algorithm/src/mca/twm/: GRAVE.cpp  TranspositionEntry.cpp  TranspositionTable.cpp  UCT.cpp
monte_carlo_algorithm/src/mca/twm/nrpa/: NRPA.cpp  Policy.cpp  Result.cpp  Sequence.cpp  code.cpp  playout.cpp
monte_carlo_algorithm/src/mca/twm/snrpa/: Policy.cpp  Result.cpp  SNRPA.cpp  Sequence.cpp  code.cpp  playout.cpp
monte_carlo_algorithm/test/mca/twm/: test_GRAVE.cpp  test_TranspositionEntry.cpp  test_TranspositionTable.cpp  test_UCT.cpp
monte_carlo_algorithm/test/mca/twm/nrpa/: test_NRPA.cpp  test_Policy.cpp  test_Sequence.cpp  test_code.cpp  test_playout.cpp
monte_carlo_algorithm/test/mca/twm/snrpa/: test_Policy.cpp  test_SNRPA.cpp  test_Sequence.cpp  test_code.cpp  test_playout.cpp
results/: grave_100_.01_50_60.csv  nrpa_100_1_100_1.csv  nrpa_100_1_25_1.csv  nrpa_100_1_50_1.csv  nrpa_100_2_25_1.csv  nrpa_1_50_1.csv  random_100.csv  random_8_4.csv  snrpa_100_1_1_100_100.csv  snrpa_100_1_1_100_100_os.csv  snrpa_100_1_1_25_100.csv  snrpa_100_1_1_25_1000.csv  snrpa_100_1_1_50_100.csv  snrpa_100_2_1_100_100_os.csv  snrpa_100_2_1_50_100.csv  snrpa_100_3_1_50_100_os.csv  uct_1_100_60.csv  uct_8_4_0.5_60.csv
results/snrpa_100_1_1_100_100/: solve0_sequences.csv  solve10_sequences.csv  solve11_sequences.csv  solve12_sequences.csv  solve13_sequences.csv  solve14_sequences.csv  solve15_sequences.csv  solve16_sequences.csv  solve17_sequences.csv  solve18_sequences.csv  solve19_sequences.csv  solve1_sequences.csv  solve20_sequences.csv  solve21_sequences.csv  solve22_sequences.csv  solve23_sequences.csv  solve24_sequences.csv  solve25_sequences.csv  solve26_sequences.csv  solve27_sequences.csv  solve28_sequences.csv  solve29_sequences.csv  solve2_sequences.csv  solve30_sequences.csv  solve31_sequences.csv  solve32_sequences.csv  solve33_sequences.csv  solve34_sequences.csv  solve35_sequences.csv  solve36_sequences.csv  solve37_sequences.csv  solve38_sequences.csv  solve39_sequences.csv  solve3_sequences.csv  solve40_sequences.csv  solve41_sequences.csv  solve42_sequences.csv  solve43_sequences.csv  solve44_sequences.csv  solve45_sequences.csv  (+60 more)
results/snrpa_100_1_1_25_100/: solve0_sequences.csv  solve10_sequences.csv  solve11_sequences.csv  solve12_sequences.csv  solve13_sequences.csv  solve14_sequences.csv  solve15_sequences.csv  solve16_sequences.csv  solve17_sequences.csv  solve18_sequences.csv  solve19_sequences.csv  solve1_sequences.csv  solve20_sequences.csv  solve21_sequences.csv  solve22_sequences.csv  solve23_sequences.csv  solve24_sequences.csv  solve25_sequences.csv  solve26_sequences.csv  solve27_sequences.csv  solve28_sequences.csv  solve29_sequences.csv  solve2_sequences.csv  solve30_sequences.csv  solve31_sequences.csv  solve32_sequences.csv  solve33_sequences.csv  solve34_sequences.csv  solve35_sequences.csv  solve36_sequences.csv  solve37_sequences.csv  solve38_sequences.csv  solve39_sequences.csv  solve3_sequences.csv  solve40_sequences.csv  solve41_sequences.csv  solve42_sequences.csv  solve43_sequences.csv  solve44_sequences.csv  solve45_sequences.csv  (+60 more)
results/snrpa_100_1_1_25_1000/: solve0_sequences.csv  solve10_sequences.csv  solve11_sequences.csv  solve12_sequences.csv  solve13_sequences.csv  solve14_sequences.csv  solve15_sequences.csv  solve16_sequences.csv  solve17_sequences.csv  solve18_sequences.csv  solve19_sequences.csv  solve1_sequences.csv  solve20_sequences.csv  solve21_sequences.csv  solve22_sequences.csv  solve23_sequences.csv  solve24_sequences.csv  solve25_sequences.csv  solve26_sequences.csv  solve27_sequences.csv  solve28_sequences.csv  solve29_sequences.csv  solve2_sequences.csv  solve30_sequences.csv  solve31_sequences.csv  solve32_sequences.csv  solve33_sequences.csv  solve34_sequences.csv  solve35_sequences.csv  solve36_sequences.csv  solve37_sequences.csv  solve38_sequences.csv  solve39_sequences.csv  solve3_sequences.csv  solve40_sequences.csv  solve41_sequences.csv  solve42_sequences.csv  solve43_sequences.csv  solve44_sequences.csv  solve45_sequences.csv  (+60 more)
results/snrpa_100_1_1_50_100/: solve0_sequences.csv  (+99 more)
scripts/: plot.py  plot_snrpa.py
tactical_wildfire_dynamics/: CMakeLists.txt
tactical_wildfire_dynamics/include/tactical_wildfire_dynamics/: Action.h  Board.h  Cell.h  Problem.h  TWDCell.h  TWDProblem.h
tactical_wildfire_dynamics/src/tactical_wildfire_dynamics/: Action.cpp  Board.cpp  Cell.cpp  Problem.cpp  TWDCell.cpp  TWDProblem.cpp
tactical_wildfire_dynamics/test/tactical_wildfire_dynamics/: test_Action.cpp  test_Board.cpp  test_Cell.cpp  test_Problem.cpp  test_TWDCell.cpp  test_TWDProblem.cpp
tactical_wildfire_management/: CMakeLists.txt
tactical_wildfire_management/include/twm/: Action.h  Board.h  Cell.h  Problem.h
tactical_wildfire_management/src/twm/: Action.cpp  Board.cpp  Cell.cpp  Problem.cpp
tactical_wildfire_management/test/twm/: test_Action.cpp  test_Board.cpp  test_Cell.cpp  test_Problem.cpp
test/: CMakeLists.txt  main.cpp
(+302 files in other folders)
